Remove DirectPV UI and Handlers (#1510)
