# api/operations/operator_api/direct_p_v_format_drive_responses.go
@@ -1,135 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-// This file is part of MinIO Operator
-// Copyright (c) 2023 MinIO, Inc.
-//
-// This program is free software: you can redistribute it and/or modify
-// it under the terms of the GNU Affero General Public License as published by
-// the Free Software Foundation, either version 3 of the License, or
-// (at your option) any later version.
-//
-// This program is distributed in the hope that it will be useful,
-// but WITHOUT ANY WARRANTY; without even the implied warranty of
-// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-// GNU Affero General Public License for more details.
-//
-// You should have received a copy of the GNU Affero General Public License
-// along with this program.  If not, see <http://www.gnu.org/licenses/>.
-//
-
-package operator_api
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	"github.com/minio/operator/models"
-)
-
-// DirectPVFormatDriveOKCode is the HTTP code returned for type DirectPVFormatDriveOK
-const DirectPVFormatDriveOKCode int = 200
-
-/*
-DirectPVFormatDriveOK A successful response.
-
-swagger:response directPVFormatDriveOK
-*/
-type DirectPVFormatDriveOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.FormatDirectPVDrivesResponse `json:"body,omitempty"`
-}
-
-// NewDirectPVFormatDriveOK creates DirectPVFormatDriveOK with default headers values
-func NewDirectPVFormatDriveOK() *DirectPVFormatDriveOK {
-
-	return &DirectPVFormatDriveOK{}
-}
-
-// WithPayload adds the payload to the direct p v format drive o k response
-func (o *DirectPVFormatDriveOK) WithPayload(payload *models.FormatDirectPVDrivesResponse) *DirectPVFormatDriveOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the direct p v format drive o k response
-func (o *DirectPVFormatDriveOK) SetPayload(payload *models.FormatDirectPVDrivesResponse) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *DirectPVFormatDriveOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-/*
-DirectPVFormatDriveDefault Generic error response.
-
-swagger:response directPVFormatDriveDefault
-*/
-type DirectPVFormatDriveDefault struct {
-	_statusCode int
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewDirectPVFormatDriveDefault creates DirectPVFormatDriveDefault with default headers values
-func NewDirectPVFormatDriveDefault(code int) *DirectPVFormatDriveDefault {
-	if code <= 0 {
-		code = 500
-	}
-
-	return &DirectPVFormatDriveDefault{
-		_statusCode: code,
-	}
-}
-
-// WithStatusCode adds the status to the direct p v format drive default response
-func (o *DirectPVFormatDriveDefault) WithStatusCode(code int) *DirectPVFormatDriveDefault {
-	o._statusCode = code
-	return o
-}
-
-// SetStatusCode sets the status to the direct p v format drive default response
-func (o *DirectPVFormatDriveDefault) SetStatusCode(code int) {
-	o._statusCode = code
-}
-
-// WithPayload adds the payload to the direct p v format drive default response
-func (o *DirectPVFormatDriveDefault) WithPayload(payload *models.Error) *DirectPVFormatDriveDefault {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the direct p v format drive default response
-func (o *DirectPVFormatDriveDefault) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *DirectPVFormatDriveDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(o._statusCode)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
