# api/operations/operator_api/get_direct_p_v_volume_list_responses.go
@@ -1,135 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-// This file is part of MinIO Operator
-// Copyright (c) 2023 MinIO, Inc.
-//
-// This program is free software: you can redistribute it and/or modify
-// it under the terms of the GNU Affero General Public License as published by
-// the Free Software Foundation, either version 3 of the License, or
-// (at your option) any later version.
-//
-// This program is distributed in the hope that it will be useful,
-// but WITHOUT ANY WARRANTY; without even the implied warranty of
-// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-// GNU Affero General Public License for more details.
-//
-// You should have received a copy of the GNU Affero General Public License
-// along with this program.  If not, see <http://www.gnu.org/licenses/>.
-//
-
-package operator_api
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	"github.com/minio/operator/models"
-)
-
-// GetDirectPVVolumeListOKCode is the HTTP code returned for type GetDirectPVVolumeListOK
-const GetDirectPVVolumeListOKCode int = 200
-
-/*
-GetDirectPVVolumeListOK A successful response.
-
-swagger:response getDirectPVVolumeListOK
-*/
-type GetDirectPVVolumeListOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.GetDirectPVVolumeListResponse `json:"body,omitempty"`
-}
-
-// NewGetDirectPVVolumeListOK creates GetDirectPVVolumeListOK with default headers values
-func NewGetDirectPVVolumeListOK() *GetDirectPVVolumeListOK {
-
-	return &GetDirectPVVolumeListOK{}
-}
-
-// WithPayload adds the payload to the get direct p v volume list o k response
-func (o *GetDirectPVVolumeListOK) WithPayload(payload *models.GetDirectPVVolumeListResponse) *GetDirectPVVolumeListOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get direct p v volume list o k response
-func (o *GetDirectPVVolumeListOK) SetPayload(payload *models.GetDirectPVVolumeListResponse) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetDirectPVVolumeListOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-/*
-GetDirectPVVolumeListDefault Generic error response.
-
-swagger:response getDirectPVVolumeListDefault
-*/
-type GetDirectPVVolumeListDefault struct {
-	_statusCode int
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewGetDirectPVVolumeListDefault creates GetDirectPVVolumeListDefault with default headers values
-func NewGetDirectPVVolumeListDefault(code int) *GetDirectPVVolumeListDefault {
-	if code <= 0 {
-		code = 500
-	}
-
-	return &GetDirectPVVolumeListDefault{
-		_statusCode: code,
-	}
-}
-
-// WithStatusCode adds the status to the get direct p v volume list default response
-func (o *GetDirectPVVolumeListDefault) WithStatusCode(code int) *GetDirectPVVolumeListDefault {
-	o._statusCode = code
-	return o
-}
-
-// SetStatusCode sets the status to the get direct p v volume list default response
-func (o *GetDirectPVVolumeListDefault) SetStatusCode(code int) {
-	o._statusCode = code
-}
-
-// WithPayload adds the payload to the get direct p v volume list default response
-func (o *GetDirectPVVolumeListDefault) WithPayload(payload *models.Error) *GetDirectPVVolumeListDefault {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get direct p v volume list default response
-func (o *GetDirectPVVolumeListDefault) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetDirectPVVolumeListDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(o._statusCode)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
