# models/operator_session_response.go
@@ -37,9 +37,6 @@ import (
 // swagger:model operatorSessionResponse
 type OperatorSessionResponse struct {
 
-	// direct p v
-	DirectPV bool `json:"directPV,omitempty"`
-
 	// features
 	Features []string `json:"features"`
 
